# huncomma

./: .gitignore  Cargo.toml  README.md  naive.csv
src/: lib.rs  main.rs  naive.words  pair.words
src/detector/: logos_naive.rs  mod.rs  naive.rs  naive_forward.rs  pair.rs  typical.rs
src/lexer/: mod.rs  plain_text_lexer.rs
src/model/: logos_token.rs  mistake.rs  mod.rs  naive_settings.rs  pair_settings.rs  text_token.rs  token.rs  typical_settings.rs
src/traits/: detector.rs  mod.rs
