[package]
name = "huncomma"
version = "0.2.0"
authors = ["VaranTavers <tasnadi98@freemail.hu>"]
edition = "2018"
license = "GPL-3.0-or-later"
keywords = ["comma", "punctuation", "hungarian"]
documentation = "https://docs.rs/huncomma"
homepage = "https://github.com/VaranTavers/huncomma"
repository = "https://github.com/VaranTavers/huncomma"
description = "This project aims to be able to detect missing commas in text files that are written in Hungarian."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.4"
